@@ -1,6 +1,5 @@
 package com.m1guelsb.springexceptions.exceptions;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,7 +15,7 @@ public class GlobalExceptionHandler {
 
   @ExceptionHandler(Exception.class)
   public final ResponseEntity<Map<String, List<String>>> handleGeneralExceptions(Exception ex) {
-    List<String> errors = Collections.singletonList(ex.getMessage());
+    List<String> errors = List.of(ex.getMessage());
 
     return ResponseEntity
         .status(HttpStatus.INTERNAL_SERVER_ERROR)
@@ -25,7 +24,7 @@ public class GlobalExceptionHandler {
 
   @ExceptionHandler(RuntimeException.class)
   public final ResponseEntity<Map<String, List<String>>> handleRuntimeExceptions(RuntimeException ex) {
-    List<String> errors = Collections.singletonList(ex.getMessage());
+    List<String> errors = List.of(ex.getMessage());
 
     return ResponseEntity
         .status(HttpStatus.INTERNAL_SERVER_ERROR)
@@ -34,7 +33,7 @@ public class GlobalExceptionHandler {
 
   @ExceptionHandler(NotFoundException.class)
   public ResponseEntity<Map<String, List<String>>> handleNotFoundException(NotFoundException ex) {
-    List<String> errors = Collections.singletonList(ex.getMessage());
+    List<String> errors = List.of(ex.getMessage());
 
     return ResponseEntity
         .status(HttpStatus.NOT_FOUND)
